--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,10 @@
 {
   "Db2": {
-    "Name": "ACC",
-    "ConnectionString": "Driver=IBM i Access ODBC Driver;System=p4notprd.mutualofenumclaw.net;naming=1;blockSize=64;Database=Q106AC8F;Port=8471;Protocol=TCPIP;Uid=S_DEVPNTRW;Pwd=W2PGRBG1BU;",
-    "Schema": "MOEDC0DAT"
+    "Name": "TST1",
+    "ConnectionString": "Driver=IBM i Access ODBC Driver;System=p4notprd.mutualofenumclaw.net;naming=1;blockSize=64;Database=Q106AC8F;Port=8471;Protocol=TCPIP;Uid=S_CSCPNTRW;Pwd=W5HX7V83IH;",
+    "Schema": "MOECC0DAT",
+    "CommFramework": {
+      "RequestUri": "http://point-tst1.mutualofenumclaw.net/cfwpi/servlet/CommFwServlet"
+    }
   }
 }
